@@ -1,3 +1,10 @@
+Wed Dec 26 17:45:49 2001  George Lebl <jirka@5z.com>
+
+	* gnome-panel-screenshot.c, menu.c, panel.c, panel-util.c,
+	  panel-widget.c:  I'm a dubmass!  GdkCursor is NOT a GObject
+
+	* foobar-widget.c:  a bit of cleanup
+
 Wed Dec 26 16:25:50 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, basep-widget.c, button-widget.c, foobar-widget.c,
